<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Diyalog içeriği -->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F10D0D"
        android:gravity="center"
        android:text="@string/str_false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize20"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space32"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDialog"
            android:layout_width="@dimen/space32"
            android:layout_height="@dimen/space32"
            android:background="@drawable/falseicon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space8"
            android:gravity="center"
            android:text="@string/false_answer_message"
            android:textColor="@color/red"
            android:textSize="@dimen/textSize16"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:text="@string/str_next"
        android:textColor="@color/white" />


</LinearLayout>
