<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space16">

    <!-- Diyalog içeriği -->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/str_true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize20"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/space32"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/space32"
            android:layout_height="@dimen/space32"
            android:background="@drawable/trueicon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space8"
            android:gravity="center"
            android:text="@string/true_answer_message"
            android:textColor="@color/green"
            android:textSize="@dimen/textSize16"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTrue"
        android:layout_width="wrap_content"
        android:padding="@dimen/space16"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:textSize="@dimen/textSize16"
        android:text="@string/str_next"
        android:textColor="@color/white" />


</LinearLayout>
