<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ResultActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trueTextView"
        android:layout_width="@dimen/space0"
        android:layout_height="@dimen/space48"
        android:layout_marginEnd="@dimen/space96"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/successTextView"
        android:layout_width="@dimen/space0"
        android:layout_height="@dimen/space0"
        android:layout_marginEnd="@dimen/space96"
        android:gravity="center"
        android:textColor="@color/yellow"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/falseTextView"
        android:layout_width="@dimen/space0"
        android:layout_height="@dimen/space48"
        android:layout_marginEnd="@dimen/space96"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/space0"
        android:layout_height="@dimen/space0"
        android:layout_marginStart="@dimen/space96"
        android:gravity="center"
        android:text="@string/str_false"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/falseTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/space0"
        android:layout_height="@dimen/space0"
        android:layout_marginStart="@dimen/space96"
        android:layout_marginBottom="@dimen/space256"
        android:gravity="center"
        android:text="@string/str_success_rate"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/successTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/space0"
        android:layout_height="@dimen/space0"
        android:layout_marginStart="@dimen/space96"
        android:gravity="center"
        android:text="@string/str_true"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="@dimen/textSize20"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/trueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/space256"
        android:layout_height="@dimen/space0"
        android:layout_marginTop="@dimen/space48"
        android:layout_marginBottom="@dimen/space400"
        android:gravity="center"
        android:text="@string/str_result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize24"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/space256"
        android:layout_height="@dimen/space0"
        android:layout_marginBottom="@dimen/space256"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space64"
        android:layout_marginEnd="@dimen/space48"
        android:layout_marginBottom="@dimen/space128"
        android:background="@color/black"
        android:text="@string/str_main_menu"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>